# my-first-gtk3-app

./: .gitignore  README.md  com.github.dimamzk.my-first-gtk3-app.yml  meson.build
.flatpak-builder/cache/: summary  summary.idx
.flatpak-builder/cache/refs/heads/app/com.github.dimamzk.my-first-gtk3-app/x86_64/: master
.flatpak-builder/cache/refs/heads/runtime/com.github.dimamzk.my_first_gtk3_app.Debug/x86_64/: master
.flatpak-builder/cache/refs/heads/runtime/com.github.dimamzk.my_first_gtk3_app.Locale/x86_64/: master
.flatpak-builder/cache/refs/heads/x86_64-com.github.dimamzk.my-first-gtk3-app.yml/: build-my-first-gtk3-app  cleanup  finish  init
.flatpak-builder/cache/summaries/: 1c918d72a53b3d5b8c51f41c28b5836884734b4b37c4e6435b3b0d1d00ac36ce-676712635e7b4201bb97c13efa27856d057cc2f8fdf3e115579f590d2013c6f3.delta  eea340a399803f7e002eddd204529f8cccf0b1ec19a4b840c0aa34c3e32bd950-676712635e7b4201bb97c13efa27856d057cc2f8fdf3e115579f590d2013c6f3.delta
.flatpak-builder/checksums/: x86_64-com.github.dimamzk.my-first-gtk3-app.yml
.github/workflows/: main.yml
data/: my-first-gtk3-app.appdata.xml.in  my-first-gtk3-app.desktop.in  my-first-gtk3-app.desktop.in~
po/: POTFILES  com.github.dimamzk.my-first-gtk3-app.pot  fr.po
src/: Application.vala
